--- a/app/res/layout/activity_new_entry.xml
+++ b/app/res/layout/activity_new_entry.xml
@@ -66,7 +66,7 @@
     android:paddingLeft="16dp"
     android:paddingRight="16dp" >
     
-         <ImageView
+        <de.hawlandshut.rueckfallprophylaxe.ui.ImageViewWithContextMenuInfo
         android:id="@+id/imgView1"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
@@ -74,8 +74,9 @@
         android:scaleType="fitStart"
         android:layout_marginRight="10dp"
         android:layout_weight="1" />
-         
-         <ImageView
+  
+
+         <de.hawlandshut.rueckfallprophylaxe.ui.ImageViewWithContextMenuInfo
         android:id="@+id/imgView2"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
@@ -84,7 +85,7 @@
          android:layout_marginRight="10dp"
         android:layout_weight="1" />
                   
-         <ImageView
+         <de.hawlandshut.rueckfallprophylaxe.ui.ImageViewWithContextMenuInfo
         android:id="@+id/imgView3"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
@@ -93,7 +94,7 @@
          android:layout_marginRight="10dp"
         android:layout_weight="1" />
                            
-          <ImageView
+          <de.hawlandshut.rueckfallprophylaxe.ui.ImageViewWithContextMenuInfo
         android:id="@+id/imgView4"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
