Password verification and determination created. Maybe a deinstallation and re-installation of the app is necessary for the app to work again.

--- a/app/res/layout/password_verify.xml
+++ b/app/res/layout/password_verify.xml
@@ -15,12 +15,9 @@
         android:id="@+id/PIN_verify"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
         android:ems="10"
-        android:inputType="textPassword" >
-
-        <requestFocus />
-    </EditText>
+        android:inputType="numberPassword"
+        android:maxLength="4" />
 
     <Button
         android:id="@+id/best_button2"
