--- a/app/res/layout/password_determine.xml
+++ b/app/res/layout/password_determine.xml
@@ -17,7 +17,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:ems="10"
-        android:inputType="textPassword" >
+        android:inputType="numberPassword"
+        android:maxLength="4" >
 
         <requestFocus />
     </EditText>
@@ -35,7 +36,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:ems="10"
-        android:inputType="textPassword" />
+        android:inputType="numberPassword"
+        android:maxLength="4" />
 
     <Button
         android:id="@+id/best_button"
