--- a/app/res/layout/activity_password_determine.xml
+++ b/app/res/layout/activity_password_determine.xml
@@ -90,7 +90,7 @@
         android:text="Bestätigen" />
 
     <ProgressBar
-        android:id="@+id/progressBar1"
+        android:id="@+id/passVerifyProgressBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/best_button"
