--- a/app/res/layout/activity_password_verify.xml
+++ b/app/res/layout/activity_password_verify.xml
@@ -1,29 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical" 
+    android:layout_margin="10dp">
 
     <TextView
         android:id="@+id/Aufforderung3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="Bitte geben Sie Ihren PIN ein" />
+        android:layout_above="@+id/PIN_verify"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="50dp"
+        android:text="PIN"
+        android:textSize="40sp" />
 
     <EditText
         android:id="@+id/PIN_verify"
-        android:layout_width="match_parent"
+        android:layout_width="170dp"
         android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
         android:ems="10"
         android:inputType="numberPassword"
-        android:maxLength="4" />
+        android:maxLength="4"
+        android:textSize="60sp" />
 
-    <Button
-        android:id="@+id/best_button2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:text="Button" />
-
-</LinearLayout>
+</RelativeLayout>
