- some style changes - all data is now provided by static ControllerData methods - PlacesToGo gotten from server are now displayed

--- a/app/res/layout/activity_password_determine.xml
+++ b/app/res/layout/activity_password_determine.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_below="@+id/textView1"
+        android:layout_below="@+id/dataLoadingLabel"
         android:ems="10"
         android:inputType="textEmailAddress" />
 
@@ -61,7 +61,7 @@
         android:text="Token" />
 
     <TextView
-        android:id="@+id/textView1"
+        android:id="@+id/dataLoadingLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
