--- a/app/res/layout/trafficlight.xml
+++ b/app/res/layout/trafficlight.xml
@@ -15,7 +15,7 @@
         android:layout_centerHorizontal="true"
         android:background="@null"
         android:layout_marginTop="40dp"
-        android:src="@drawable/red_button" />
+        android:src="@drawable/red_light" />
 
             <ImageButton
                 android:id="@+id/yellowButton"
@@ -25,7 +25,7 @@
                 android:layout_below="@+id/redButton"
                 android:background="@null"
                 android:layout_marginTop="35dp"
-                android:src="@drawable/red_button" />
+                android:src="@drawable/yellow_light" />
 
             <ImageButton
                 android:id="@+id/greenButton"
@@ -35,6 +35,6 @@
                 android:layout_below="@+id/yellowButton"
                 android:background="@null"
                 android:layout_marginTop="44dp"
-                android:src="@drawable/red_button" />
+                android:src="@drawable/green_light" />
 
 </RelativeLayout>
