--- a/app/res/layout/case_1.xml
+++ b/app/res/layout/case_1.xml
@@ -12,19 +12,21 @@
                 android:layout_weight="2">
     <ImageView
             android:layout_width="fill_parent"
-            android:layout_height="100dp"
+            android:layout_height="160dp"
             android:layout_alignParentLeft="true"
             android:layout_alignTop="@+id/list_view_koffer"
             android:id="@+id/image_koffer"
-            android:background="@drawable/face_not_final" android:layout_toLeftOf="@+id/list_view_koffer"
+            android:background="@drawable/smiley_face" android:layout_toLeftOf="@+id/list_view_koffer"
             android:layout_weight="2"/>
-    <Button 
-            android:layout_width="fill_parent"
-            android:layout_height="100dp"
-            android:text="@string/notfall"
-            android:layout_weight="2"
-            android:id="@+id/emergency"
-            >
+
+    <Button
+        android:id="@+id/emergency"
+        android:layout_width="fill_parent"
+        android:layout_height="60dp"
+        android:layout_weight="2"
+        android:background="#ffff0000"
+        android:text="@string/notfall" >
+
     </Button>
     </LinearLayout>
     <ListView
