HomeActivity little changes

--- a/app/res/layout/activity_home.xml
+++ b/app/res/layout/activity_home.xml
@@ -44,16 +44,17 @@
         android:layout_height="50dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="40dp"
         android:onClick="callTagebuch"
         android:text="@string/btn_tagebuch" />
 
     <Spinner
         android:id="@+id/spinnemotion"
-        android:layout_width="wrap_content"
+        android:layout_width="160dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
         android:layout_below="@+id/btnAblenkungen"
-        android:layout_marginTop="41dp" />
+        android:layout_marginTop="10dp"
+        android:layout_alignLeft="@+id/btnNotfallkoffer"
+        android:layout_centerVertical="true" />
 
 </RelativeLayout>
