Little Style Changes and yellow button works now

--- a/app/res/layout/betwixt.xml
+++ b/app/res/layout/betwixt.xml
@@ -29,16 +29,17 @@
             android:id="@+id/betwixt2"
             android:layout_width="160dp"
             android:layout_height="50dp"
-            android:layout_alignParentLeft="true"
+            android:layout_alignLeft="@+id/betwixt1"
             android:layout_below="@+id/betwixt1"
-            android:layout_marginTop="45dp"
+            android:layout_marginTop="40dp"
             android:text="@string/btn_ablenkungen" />
 
         <Spinner
             android:id="@+id/spinnemotion2"
-            android:layout_width="wrap_content"
+            android:layout_width="80dp"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_alignTop="@+id/betwixt2" />
+            android:layout_alignLeft="@+id/betwixt2"
+            android:layout_alignRight="@+id/betwixt2"
+            android:layout_below="@+id/betwixt2" />
 
 </RelativeLayout>
