--- a/app/res/layout/activity_home.xml
+++ b/app/res/layout/activity_home.xml
@@ -24,7 +24,7 @@
         android:layout_height="50dp"
         android:layout_alignLeft="@+id/btnTagebuch"
         android:layout_below="@+id/btnNotfallkoffer"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="40dp"
         android:onClick="callAnlaufstellen"
         android:text="@string/btn_anlaufstellen" />
 
@@ -52,9 +52,7 @@
         android:id="@+id/spinnemotion"
         android:layout_width="160dp"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/btnAblenkungen"
-        android:layout_marginTop="10dp"
-        android:layout_alignLeft="@+id/btnNotfallkoffer"
-        android:layout_centerVertical="true" />
+        android:layout_alignLeft="@+id/btnAblenkungen"
+        android:layout_below="@+id/btnAblenkungen" />
 
 </RelativeLayout>
