not working, just for testing on another computer

--- a/app/res/layout/activity_emotion.xml
+++ b/app/res/layout/activity_emotion.xml
@@ -9,36 +9,33 @@
     tools:context=".EmotionActivity" >
 
    <TextView
+       
         android:id="@+id/ermutigungs_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="20sp"
-        android:text="@string/ermutigungs_text" />
+         />
     
     <Button 
+       	android:layout_width="160dp"
+        android:layout_height="50dp"
         android:id="@+id/Ablenkung_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        
         android:layout_centerHorizontal="true"
         android:layout_below="@id/ermutigungs_text"
         android:text="@string/Ablenkung_button"
         android:onClick="switch_to_Distraction"/>
     
     <Button        
+        android:layout_width="160dp"
+        android:layout_height="50dp"
         android:id="@+id/MP3_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+       
         android:layout_centerHorizontal="true"
         android:layout_below="@id/Ablenkung_button"
         android:text="@string/MP3_button" 
         />
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/MP3_button"
-            android:layout_centerHorizontal="true"
-            android:text="@string/Spiele_button" />
 
 </RelativeLayout>
 
