--- a/app/res/layout/activity_distraction.xml
+++ b/app/res/layout/activity_distraction.xml
@@ -1,35 +1,14 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<?xml version="1.0" encoding="utf-8"?>
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/FrameLayoutDistraction"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".DistractionActivity" >
+    android:background="@color/grey" >
 
-<TextView
-        android:id="@+id/Mandala"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/Ablekung1" />
-    <TextView
-        android:id="@+id/Laufen"
-        android:layout_below="@id/Mandala"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/Ablekung2" />
-     <TextView
-        android:id="@+id/Fitness"
-        android:layout_below="@id/Laufen"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/Ablekung3" />
-      <TextView
-        android:id="@+id/Computer"
-        android:layout_below="@id/Fitness"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/Ablekung4" />
+    <ListView
+        android:id="@+id/distractionListView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+    </ListView>
 
-</RelativeLayout>
+</FrameLayout>
