icon changed and some stuff in emergency case

--- a/app/res/layout/case_2.xml
+++ b/app/res/layout/case_2.xml
@@ -8,7 +8,12 @@
 
 
         
-
+    <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/help_people"
+              android:id="@+id/textView2" android:layout_weight="1"
+              android:textColor="@android:color/black"/>
+    <ListView android:layout_width="match_parent" android:layout_height="wrap_content"
+            android:id="@+id/help_people" android:layout_weight="3" android:layout_marginLeft="50dp"
+            />
     <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -25,10 +30,11 @@
     <ListView android:layout_width="match_parent" android:layout_height="wrap_content" 
             android:id="@+id/safety_thoughts" android:layout_weight="3" android:layout_marginLeft="50dp"
             />
-    <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/help_people"
-              android:id="@+id/textView2" android:layout_weight="1"
+    <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/limit_relapse"
+              android:layout_weight="1"
               android:textColor="@android:color/black"/>
-    <ListView android:layout_width="match_parent" android:layout_height="wrap_content"
-            android:id="@+id/help_people" android:layout_weight="3" android:layout_marginLeft="50dp"
+    <ListView android:layout_width="match_parent" android:layout_height="wrap_content" 
+            android:id="@+id/limit_relapse" android:layout_weight="3" android:layout_marginLeft="50dp"
             />
+
 </LinearLayout>
