--- a/app/res/layout/case_3.xml
+++ b/app/res/layout/case_3.xml
@@ -22,13 +22,27 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_weight="2">
+            <LinearLayout 
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical" >
     
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/ec_text"
+            android:id="@+id/ec_text_1"
             />
-        
+                <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/ec_text_2"
+            />
+                        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/ec_text_3"
+            />
+   </LinearLayout>     
    </ScrollView>
     
 
