-some bug fixes -Location of ContactPoints now stored in database

--- a/app/res/layout/activity_password_determine.xml
+++ b/app/res/layout/activity_password_determine.xml
@@ -19,7 +19,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_below="@+id/textView2" />
+        android:layout_below="@+id/textView2"
+        android:inputType="textCapCharacters|number" />
 
     <TextView
         android:id="@+id/Aufforderung1"
@@ -28,7 +29,7 @@
         android:layout_alignLeft="@+id/textView2"
         android:layout_below="@+id/editTextToken"
         android:layout_marginTop="15dp"
-        android:text="PIN erstellen" />
+        android:text="@string/pin_create" />
 
     <EditText
         android:id="@+id/editTextPin1"
@@ -39,7 +40,7 @@
         android:ems="10"
         android:inputType="numberPassword"
         android:maxLength="4"
-        android:width="100dp" />
+        android:width="80dp" />
 
     <TextView
         android:id="@+id/Aufforderung2"
@@ -47,9 +48,9 @@
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/Aufforderung1"
         android:layout_alignBottom="@+id/Aufforderung1"
-        android:layout_toRightOf="@+id/editTextPin1"
         android:layout_marginLeft="20dp"
-        android:text="PIN wiederholen" />
+        android:layout_toRightOf="@+id/editTextPin1"
+        android:text="@string/pin_reenter" />
 
     <TextView
         android:id="@+id/textView2"
@@ -58,7 +59,7 @@
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/editTextEmail"
         android:layout_marginTop="15dp"
-        android:text="Token" />
+        android:text="@string/label_token" />
 
     <TextView
         android:id="@+id/dataLoadingLabel"
@@ -66,7 +67,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:text="E-Mail" />
+        android:text="@string/label_mail" />
 
     <EditText
         android:id="@+id/editTextPin2"
@@ -78,7 +79,7 @@
         android:ems="10"
         android:inputType="numberPassword"
         android:maxLength="4"
-        android:width="100dp" />
+        android:width="80dp" />
 
     <Button
         android:id="@+id/best_button"
@@ -87,7 +88,7 @@
         android:layout_alignParentRight="true"
         android:layout_below="@+id/editTextPin2"
         android:layout_marginTop="15dp"
-        android:text="Bestätigen" />
+        android:text="@string/btn_submit" />
 
     <ProgressBar
         android:id="@+id/passVerifyProgressBar"
