--- a/app/res/layout/activity_contactpoint_list.xml
+++ b/app/res/layout/activity_contactpoint_list.xml
@@ -8,7 +8,9 @@
     <ListView
         android:id="@+id/contactpointListView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content"
+        android:clickable="false" >
+
     </ListView>
 
 </FrameLayout>
