--- a/app/res/layout/activity_password_verify.xml
+++ b/app/res/layout/activity_password_verify.xml
@@ -12,7 +12,7 @@
         android:layout_above="@+id/PIN_verify"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="50dp"
-        android:text="PIN"
+        android:text="@string/label_pin"
         android:textSize="40sp" />
 
     <EditText
@@ -22,6 +22,7 @@
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:ems="10"
+        android:gravity="top|center_horizontal"
         android:inputType="numberPassword"
         android:maxLength="4"
         android:textSize="60sp" />
