--- a/app/res/menu/contactpoints.xml
+++ b/app/res/menu/contactpoints.xml
@@ -5,6 +5,9 @@
           android:showAsAction="never" />
     <item android:id="@+id/action_search_contactpoints"
           android:title="@string/action_search"
-          android:showAsAction="always" android:icon="@drawable/ic_action_search"/>
+          android:icon="@drawable/ic_action_search"
+          android:showAsAction="collapseActionView|ifRoom"
+          android:actionViewClass="android.widget.SearchView" />
+
 
 </menu>
