--- a/app/res/layout/activity_emotion.xml
+++ b/app/res/layout/activity_emotion.xml
@@ -15,27 +15,26 @@
         android:layout_height="wrap_content"
         android:textSize="20sp"
          />
-    
-    <Button 
-       	android:layout_width="160dp"
-        android:layout_height="50dp"
-        android:id="@+id/Ablenkung_button"
-        
-        android:layout_centerHorizontal="true"
-        android:layout_below="@id/ermutigungs_text"
-        android:text="@string/Ablenkung_button"
-        android:onClick="switch_to_Distraction"/>
-    
-    <Button        
+
+    <ListView
+        android:id="@+id/distractionListView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/MP3_button"
+        android:layout_marginBottom="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_alignLeft="@+id/ermutigungs_text"
+        android:layout_below="@+id/ermutigungs_text" >
+
+    </ListView>
+
+    <Button
+        android:id="@+id/MP3_button"
         android:layout_width="160dp"
         android:layout_height="50dp"
-        android:id="@+id/MP3_button"
-       
+        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_below="@id/Ablenkung_button"
-        android:text="@string/MP3_button" 
-        />
-
+        android:text="@string/MP3_button" />
 
 </RelativeLayout>
 
